policies/gatekeeper/constraints/imagesigned_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageSigned
metadata:
  name: require-image-digest-signing
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
  parameters:
    requireDigest: true
